feat: implementing gemini IA service